--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "prettier": "^1.6.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13"
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.13",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.72.0"
   },
   "scripts": {
     "start": "react-scripts start",
